--- a/download_centre/multi-pane_overlay_disable_reg.html
+++ b/download_centre/multi-pane_overlay_disable_reg.html
@@ -46,8 +46,8 @@
 				<p class="imgdescription">The Disable_MPO.reg and Enable_MPO.reg files can be used to disable the Windows 8.1, 10, 11 Multi-Plane Overlay feature.</p>
 			<h2 id="function">What do the .reg files do?</h2>
 				<p>There are two .reg files, these files enable and disable the Multi-Plane Overlay feature that is present in Windows 8.1 and later.</p>
-				<p>In later versions of Windows 10 and in Windows 11 the Multi-Plane Overlay feature can cause problems with Hardware Acceleration, this can result in black artefacts, black checkerboards, and black flashing screens, etc, to learn more visit the 'Fix Hardware Acceleration Black Screen' guide.</p>
-				<a class="linkbutton" href="https://hackbototechtips.github.io/pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn About Fixing Black Screens and Artefacts in Windows 10/ 11 Without Disabling HW Acceleration">View Fix Hardware Acceleration Black Screen guide</a>
+				<p>In later versions of Windows 10 and in Windows 11 the Multi-Plane Overlay feature can cause problems with Hardware Acceleration, this can result in black artefacts, black checkerboards, black flashing screens, etc, to learn more visit the 'Fix Hardware Acceleration Issues' guide.</p>
+				<a class="linkbutton" href="https://hackbototechtips.github.io/pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn About Fixing Black Screens and Artefacts in Windows 10/ 11 Without Disabling HW Acceleration">View Fix Hardware Acceleration Issues guide</a>
 			<h2 id="download">Downloading the .reg Files</h2>
 				<p>You can download the .reg files using the download button below, this should start the download process.</p>
 				<a class="linkbutton" title="Download MPO_Fix.zip" href="https://github.com/H90HSORH0J30JHDSRH/hackbototechtipsfiles/releases/download/downloads/MPO_Fix.zip">Download MPO_Fix.zip</a>
@@ -61,7 +61,7 @@
 				<p>To make the changes to your computer, you simply need to double click on the file you would like to run, once you have been told that the file has been successfully added to the registry you will need to restart your computer.</p>
 				<p><strong>If Disabling Multi-Plane Overlay did not fix your problems, I strongly advise that you re-enable it as this could potentially cause performance issues if you have disabled it and it wasn't the cause of your problems.</strong></p>
 		<hr>
-		<p>Page Updated: 14/10/2024</p>
+		<p>Page Updated: 24/03/2025</p>
 		<p>Page Author: Hackboto</p>
 	</article>
 	<footer class="asidefooter" title="Website Footer"> <!--Footer-->
