--- a/download_centre/settings_optimiser.html
+++ b/download_centre/settings_optimiser.html
@@ -47,6 +47,7 @@
 			<h2 id="function">What Does the Script Do?</h2>
 				<p>The Hackboto Tech Tips Settings Optimiser script is a free script that changes your Windows 10/ 11 settings, many of the settings changed are not accessible through the standard settings app, this is where the script comes into play as it disables unnecessary telemetry and data collection on your PC, the script will also disable non-essential system services that are made redundant as a result of the changes to your settings.</p>
 				<p>The script will disable things that are generally considered to be bloatware and adware on your PC, this script will remove things like Co-Pilot AI, Feed from Microsoft Edge browser, Windows spotlight, etc.</p>
+				<p><strong>I have designed my scripts in such a way that the core functionality in Windows 11 works as you'd expect, however many of the creators behind similar scripts are not as considerate and may end up and breaking core functionality such as being able to use OneDrive, sync passwords with Microsoft Edge, etc so be careful.</strong></p>
 			<h2 id="download">Downloading the scripts</h2>
 				<p>You can download the scripts using the download button below, this should start the download process.</p>
 				<a class="linkbutton" title="Download Settings_Optimiser.zip" href="https://github.com/H90HSORH0J30JHDSRH/Windows_Optimisation_Scripts/releases/download/1.2.91/Settings_Optimiser.zip">Download Settings_Optimiser.zip</a>
@@ -75,7 +76,7 @@
 					<p>This script does not require admin rights; therefore, you can run it on both standard and admin accounts. If you have many user accounts on your computer, you will need to run the script on each account.</p>
 					<p>To run the script, you need to repeat the steps in step 1, however you need to run the User_Settings_Optimiser.bat instead of the System_Settings_Optimiser.bat.</p>
 		<hr> 
-		<p>Page Updated: 11/03/2025</p>
+		<p>Page Updated: 24/03/2025</p>
 		<p>Page Author: Hackboto</p>
 	</article>
 	<footer class="asidefooter" title="Website Footer"> <!--Footer-->
