--- a/map.html
+++ b/map.html
@@ -45,8 +45,7 @@
 			<ul>
 				<li><h3><a href="pc_tips/upgrading_to_windows11.html" title="Learn how and why you should upgrade to Windows 11">Upgrade to Windows 11 24H2</a></h3></li>
 				<li><h3><a href="pc_tips/windows_optimise.html" title="Learn how you can optimise your Windows PC">Optimising Windows 10/ 11</a></h3></li>
-				<li><h3><a href="pc_tips/windows_debloat.html" title="Learn how and why you should debloat your PC.">Debloating Windows 11 24H2</a></h3></li>
-				<li><h3><a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn how you can fix the back screen artefacts caused by hardware acceleration.">Fix Hardware Acceleration Black Screen</a></h3></li>
+				<li><h3><a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn how you can fix the back screen, flickering, and other artefacts caused by hardware acceleration.">Fix Hardware Acceleration Issues</a></h3></li>
 				<li><h3><a href="pc_tips/windows_backup.html" title="Learn how you can backup your Windows PC.">Backing Up Windows 10/ 11</a></h3></li>
 				<li><h3><a href="pc_tips/adblocker.html" title="Learn about blocking ads on your PC.">Blocking ads on your PC</a></h3></li>
 				<li><h3><a href="pc_tips/check_wddm_version.html" title="Learn about checking your WDDM driver version">Finding your WDDM version</a></h3></li>
