--- a/pc_tips.html
+++ b/pc_tips.html
@@ -53,17 +53,11 @@
 				<p>Has your PC gotten very slow, are errors popping up all the time, is it taking you forever to get stuff done? If you are facing lacklustre performance and high levels of instability you should read on as this guide will explain how you can overcome these issues.</p>
 				<a href="pc_tips/windows_optimise.html" title="Read More about Optimising Windows 10/ 11">View Guide</a>
 			</div>
-			<div class="articlecolumn" style="background-image: url(pc_tips/card_images/debloat.webp);" title="Debloat Windows 11 24H2">
-				<h3>Debloat Windows 11 24H2</h3>
+			<div class="articlecolumn" style="background-image: url(pc_tips/card_images/black_artefacts_mockup.webp);" title="Fix Hardware Acceleration Issues">
+				<h3>Fix Hardware Acceleration Issues</h3>
 				<hr>
-				<p>Are you getting sick and tired of popups telling you to sign up for X Y Z, are you getting sick of constant notifications, and are you getting sick of poor performance from your PC, if so, read the guide.</p>
-				<a href="pc_tips/windows_debloat.html" title="Read about debloating Windows 11 24H2">View Guide</a>
-			</div>
-			<div class="articlecolumn" style="background-image: url(pc_tips/card_images/black_artefacts_mockup.webp);" title="Fix Hardware Acceleration Black Screen">
-				<h3>Fix Hardware Acceleration Black Screen</h3>
-				<hr>
-				<p>Are you having issues with black screens, black boxes, black checkerboards etc on your Windows 10/ 11 PC? If you are, learn how you can fix the problem without disabling Hardware Acceleration.</p>
-				<a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn About Fixing Black Screens and Artefacts in Windows 10/ 11 Without Disabling HW Acceleration">View Guide</a>
+				<p>Are you having issues with black screens, black boxes, black checkerboards, flickering video playback, etc on your Windows 10/ 11 PC? If you are, learn how you can fix the problem without disabling Hardware Acceleration.</p>
+				<a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn About Fixing Black Screens and Artefacts Without Disabling HW Acceleration">View Guide</a>
 			</div>
 			<div class="articlecolumn" style="background-image: url(pc_tips/card_images/computer_backup.webp);" title="Backing up your Windows 10/ 11 PC">
 				<h3>Backing up Windows 10/ 11</h3>
