--- a/pc_tips/hardware_acceleration_black_screen_fix.html
+++ b/pc_tips/hardware_acceleration_black_screen_fix.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Learn how to fix black squares and black flashing screens in Google Chrome, Zoom, Microsoft Office, etc.">
-	<meta name="keywords" content="Google Chrome, black squares, black screen, hardware acceleration, Multi-Plane Overlay, fix">
+	<meta name="description" content="Learn how to fix black squares, black flashing screens, flickering, etc in Google Chrome, Zoom, Microsoft Office, etc.">
+	<meta name="keywords" content="Google Chrome, black squares, black screen, hardware acceleration, Multi-Plane Overlay, fix, flasing">
 	<meta name="robots" content="index, follow">
 	<link rel="stylesheet" href="../stylesheet.css"> <!--Stylesheet-->
 	<link rel="icon" type="image/x-icon" href="../favicon.png">
 	<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
 	<script src="../scripts.js"></script> <!--JavaScript-->
-	<title>Black Screen HW Acceleration Fix | Hackboto Tech Tips</title>
+	<title>Fix HW Acceleration Issues | Hackboto Tech Tips</title>
 </head>
 <body>
 	<div class="sticky">
@@ -42,18 +42,18 @@
 		</ul>        
 	</aside>    
 	<article title="Main Article Content">
-		<h1 id="top-of-page">Fixing Black Squares and Flashing Black Screens in Applications That Use Hardware Acceleration</h1>
+		<h1 id="top-of-page">Fixing Hardware Acceleration issues such as Black Squares, Flashing Black Screens, and Flickering.</h1>
 			<img src="hardware_acceleration_black_screen_fix/black_artefacts_mockup.webp" alt="an image representing black artefacts in Microsoft Office.">
-				<p class="imgdescription">The glitch causes applications that use Hardware Acceleration to have black artefacts, this image is a mock-up as the artifacts do not appear long enough to capture an example.</p>
+				<p class="imgdescription">The glitch causes applications that use Hardware Acceleration to have black artefacts and other rendering issues, this image is a mock-up as the artifacts do not appear long enough to capture an example.</p>
 			<h2 id="Introduction">Introduction</h2>
-				<p>Have you run into problems on Windows 10/ 11 where your screen randomly starts flashing black, you see black squares in videos and when you are browsing the internet, you see black squares in Microsoft Office?</p>
+				<p>Have you run into problems on Windows 10/ 11 where your screen randomly starts flashing black, you see black squares in videos and when you are browsing the internet, you see black squares in Microsoft Office, you see stuttering and flickering when playing back videos in YouTube?</p>
 				<p>These artefacts only appear for a few seconds at a time and can make you feel like you are going crazy because they are so random and unpredictable, you are not alone if you are experiencing these issues as it is really common on Windows 10/ 11 PCs.</p>
 				<h3 id="hardware-acceleration">Why you shouldn't disable Hardware Acceleration.</h3> 
 					<p>The black screen problem and checkerboard squares are often associated with Hardware Acceleration as these problems are easily fixed by disabling Hardware Acceleration in your application settings.</p>
 					<p>The problem with disabling Hardware Acceleration is that it can drastically worsen the performance of your computer, especially with regards to graphics-based performance such as video calling, watching videos, etc, therefore I do not consider this to be an actual fix to the problem as it is simply replacing one problem with another.</p>
-				<h3 id="multi-plane-overlay">Multi-Plane Overlay Fix</h3>
+				<h3 id="multi-plane-overlay">What is Multi-Plane Overlay?</h3>
 					<p>In Windows 8.1 a feature was introduced called Multi-Plane Overlay (MPO). This feature aims to improve performance by allowing multiple planes to be overlaid, but it can lead to rendering issues in certain situations.</p>
-					<p>The hardware manufacturer NVIDIA has stated that disabling Multi-Plane Overlay can fix some graphics related issues, I have tested this myself on different computer systems with similar black artifacts and it solved the problems, including a black screen problem on a Lenovo IdeaPad 110-15IBR laptop that rendered it unusable on Windows 11.</p>
+					<p>The hardware manufacturer NVIDIA has stated that disabling Multi-Plane Overlay can fix some graphics related issues, I have tested this myself on different computer systems with similar black artifacts and it solved the problems, including a black screen problem on a Lenovo IdeaPad 110-15IBR laptop that rendered it unusable on Windows 10/ 11.</p>
 					<a class="linkbutton" title="Visit NVIDIA Support" href="https://nvidia.custhelp.com/app/answers/detail/a_id/5157/~/after-updating-to-nvidia-game-ready-driver-461.09-or-newer%2C-some-desktop-apps">View NVIDIA statement on MPO.</a>
 				<h3 id="registry-fix">Registry Fix</h3>
 					<p>Based on the advice provided by NVIDIA Support, it is possible to disable Multi-Plane Overlay, through a registry tweak.</p>
@@ -69,7 +69,7 @@
 "OverlayTestMode"=-</pre>
 					<p><strong>After applying the tweak via the premade files or manually you, you will need to restart your computer to apply the changes.</strong></p>
 		<hr>
-		<p>Page Updated: 29/05/2024</p>
+		<p>Page Updated: 24/03/2025</p>
 		<p>Page Author: Hackboto</p>
 	</article>
 	<footer class="asidefooter" title="Website Footer"> <!--Footer-->
