--- a/pc_tips/upgrading_to_windows11.html
+++ b/pc_tips/upgrading_to_windows11.html
@@ -103,21 +103,21 @@
 				<img src="upgrading_to_windows11/installing_Windows_Server.webp" alt="Installing Windows Server">
 				<p><strong>If you see a screen that says "Installing Windows Server" do not be alarmed, this is normal when upgrading to Windows 11 on an unsupported PC.</strong></p>
 				<p>The upgrade to Windows 11 can take a very long time, especially if you have an older computer. The upgrade process can be as little as 10 minutes or take several hours to complete, just be patient and make sure that your device is plugged in and on charge.</p>
-			<h2 id="what-to-do-after-upgrading">What you need to do after upgrading to Windows 11</h2>
+			<h2 id="what-to-do-after-upgrading">What you need to do after upgrading to Windows 11 24H2</h2>
 				<p>After your computer has finished upgrading to Windows 11, there are three things that I recommend you do: </p>
 				<ol>
 					<li>Check for Windows Updates.</li>
 					<li>Optimise your computer.</li>
-					<li>Debloat your computer.</li>
+					<li>Optimise your settings.</li>
 				</ol>
 				<p>Checking for updates is really easy on Windows 11 as you just need to open the Settings app and navigate to 'Windows Update', alternatively you can use the link below to check for Windows updates.</p>
 				<a class="linkbutton" title="Launch Settings: Check for Windows updates." href="ms-settings:windowsupdate">Check for Windows updates</a>
 				<p>It is important to optimise your Windows 10/ 11 computer system to ensure that you get the most out of it, learn about why and how you should optimise your PC by visiting my guide.</p>
 				<a class="linkbutton" href="https://hackbototechtips.github.io/pc_tips/windows_optimise" title="Visit my guide on optimising your Windows PC">Guide on optimising Windows 10/ 11</a>
-				<p>Debloating your computer system is a really straight forward process, you can learn about the benefits of debloating your computer system, and how you can do it by visiting my guide which is linked below.</p>
-				<a class="linkbutton" href="https://hackbototechtips.github.io/pc_tips/windows_debloat.html" title="Visit my guide on debloating Windows 11 24H2">Guide on Debloating Windows 11 24H2</a>
+				<p>Windows 11 comes with many annoyances such as Recall AI, Copilot AI, widget ads in the taskbar, etc, optimising your settings will disable all this junk, make your PC run smoother and improve your productivity.</p>
+				<a class="linkbutton" href="https://hackbototechtips.github.io/download_centre/settings_optimiser.html" title="Visit the Settings Optimiser Scripts download page">Download: Settings Optimiser Scripts</a>
 			<hr>
-		<p>Page Updated: 01/01/2025</p>
+		<p>Page Updated: 24/03/2025</p>
 		<p>Page Author: Hackboto</p>
 	</article>
 	<footer class="asidefooter" title="Website Footer"> <!--Footer-->
