--- a/pc_tips/windows_optimise.html
+++ b/pc_tips/windows_optimise.html
@@ -40,7 +40,8 @@
 			<li class="Subheading"><a href="#clearing-browser-cache" title="Jump to clearing browser cache">Clearing browser cache</a></li>
 			<li class="Subheading"><a href="#hackboto-optimiser" title="Hackboto Tech Tips: Windows Optimiser">Hackboto Tech Tips: Windows Optimiser</a></li>
 			<li class="Subheading"><a href="#defrag" title="Jump to Defragmenting your Hard Drive">Defragmenting your HDD</a></li>
-			<li class="Subheading"><a href="#reinstall-windows" title="Jump to Reinstalling Windows">Reinstalling Windows</a></li>
+			<li class="Subheading"><a href="#repair-windows" title="Jump to Repairing Windows">Repairing Windows 11</a></li>
+			<li class="Subheading"><a href="#reinstall-windows" title="Jump to Clean-Install Windows">Clean-Install Windows</a></li>
 		</ul>        
 	</aside>    
 	<article title="Main Article Content">
@@ -51,12 +52,13 @@
 				<p>Have you noticed that your computer has started to get slower and more unstable, you might be thinking that you are getting ready for a new one if this is the case, however this perceived slowness and glitchy behaviour is likely to be caused by system corruption and old temporary files that are cluttering up your computer system.</p>
 				<p>In this article I will discuss the things you can do to optimise the performance of your PC and make it like new again.</p>
 				<h3 id="removing-junk-corruption">How do I remove junk and corruption?</h3>
-					<p>Over time your computer will culminate junk and corrupt files, this is normal and is why computers slow down over time, there are three things that you can do to fix this:</p>
+					<p>Over time your computer will culminate junk and corrupt files, this is normal and is why computers slow down over time, there are four things that you can do to fix this:</p>
 					<ol>
 						<li>Clear your browser history and browser cache.</li>
 						<li>Run the Hackboto Tech Tips Windows Optimiser.</li>
-						<li>Defrag your Hard Drive</li>
-						<li>Reinstall Windows 10 /11.</li>
+						<li>Defragment your Hard Drive.</li>
+						<li>Repair Windows 11.</li>
+						<li>Clean-install Windows 10 /11.</li>
 					</ol>
 					<p><strong>I advise that you backup your computer before proceeding, you can learn about backing up your computer and your files in my "Backing Up Windows 10/ 11" guide, link below.</strong></p>
 					<a class="linkbutton" title="Visit Backing Up Windows 10/ 11 guide" href="https://hackbototechtips.github.io/pc_tips/windows_backup.html">View Backing Up Windows 10/ 11 guide</a>
@@ -71,7 +73,7 @@
 					<img src="windows_optimise/browser_step_4.webp" alt="an image representing Microsoft Edge, Clear browsing data is highlighted, the Choose what to clear button is also highlighted">
 					<p>You now need to scroll down until you see the Clear browsing data section, you then need to click on Choose what to clear.</p>
 					<img src="windows_optimise/browser_step_5.webp" alt="an image representing Microsoft Edge, Clear browsing data popup, Time range is set to all time, Browsing history is selected, Download history is selected, Cookies and other site data is selected, Cached images and files is selected.">
-					<p>You are now at the bit where you delete your browser history and browser cache, make sure you select "All time" for the time range, also make sure that passwords are deselected as this would delete all your saved passwords if you select this. I recommend selecting the options as they are in the image above as this will be the most effective way of clearing the junk from your browser.</p>
+					<p>You are now at the stage where you delete your browser history and browser cache, make sure you select "All time" for the time range, also make sure that passwords are deselected as this will delete all your saved passwords if you select this. I recommend selecting the options as they are in the image above to effectively clear the junk from your browser.</p>
 					<p><strong>Please take notice that this will delete all of your browser history, sign you out from websites, etc, your settings will remain as this is only clearing the browsing data.</strong></p>
 					<p>You will now find that your computer feels a bit snappier when you are browsing the internet.</p>
 				<h3 id="hackboto-optimiser">Hackboto Tech Tips: Windows Optimiser</h3>
@@ -80,35 +82,40 @@
 					<p>Our Windows Optimiser tool is designed for those who do not have a high level of technical knowledge and want to improve the stability and performance of their computer system at a touch of a button.</p>
 					<p>You can learn more about the Hackboto Tech Tips Windows Optimiser program clicking on the link below.</p>
 					<a class="linkbutton" title="Visit Windows Optimiser Download Page" href="https://hackbototechtips.github.io/download_centre/windows_optimiser.html">View: Windows Optimiser download page</a>
-					<p><strong>Before you run any scripts on your computer system, I would advise you to back up your system first so that you can restore it back to its previous state in the event that anything goes wrong.</strong></p>
+					<p><strong>Before you run the program on your computer system, I would advise you to back up your system first so that you can restore it back to its previous state in the event that anything goes wrong.</strong></p>
 					<a class="linkbutton" title="Visit Backing Up Windows 10/ 11 guide" href="https://hackbototechtips.github.io/pc_tips/windows_backup.html">View Backing Up Windows 10/ 11 guide</a>
 				<h3 id="defrag">How to defragment your Hard Disk Drive.</h3>
 					<img src="windows_optimise/windows_defragment.webp" alt="an image representing the Windows 11 system drive defragment utility">
 					<p>If you have an older PC that originally came with Windows 10 or older, you might have a mechanical boot drive, this means that your PC might slow down after a while if it is not defragmented, if you have an HDD boot drive you will see a huge improvement in performance after defragmenting your drive.</p>
 					<img src="windows_optimise/windows_11_defrag_search.webp" alt="an image representing the Windows 11 search menu, Defragment and Optimise Drives is displayed.">
-					<p>In Windows Vista, Windows 7, Windows 8, Windows 10, and Windows 11 to launch the defragment utility you just need to launch your start menu and type "defragment" and you will see the utility as pictured.</p>
+					<p>In Windows Vista, 7, 8, 10, and Windows 11 to launch the defragment utility you just need to launch your start menu and type "defragment”, and you will see the utility as pictured.</p>
 					<img src="windows_optimise/windows_defragment.webp" alt="an image representing the Windows 11 system drive defragment utility">
 					<p>You should now see a screen that looks like this one, what you need to do is make sure that advanced view is ticked, click on the top drive, then click the button where it says Defragment or Optimise, you will need to repeat this process for all of the Drives that you see working you way from the top to the bottom.</p>
-					<p>You just need to wait for the Current status to change to OK on all the drives, then you can close the utility and you have successfully defragmented/ optimised your storage drives.</p>
+					<p>You just need to wait for the Current status to change to OK on all the drives, close the utility once you have successfully defragmented/ optimised your storage drives.</p>
 					<img src="windows_optimise/hard_drive.webp" alt="an image representing the Windows 8 system drive defragment utility, hard disk drive media type.">
 					<p>If your media type is reported as a Hard Disk Drive (HDD), you might want to consider upgrading to a Solid-State Drive (SSD) as these are much (faster, cheaper, durable) better than HDDs, you can buy them for as little as £20 pound and they will make your computer run faster than when it was new!</p>
-				<h3 id="reinstall-windows">How to Reinstall Windows 10/ 11</h3>
-					<img src="windows_optimise/resetting_this_pc.webp" alt="an image showing the Windows 11 Reset This PC screen, resetting this pc is at 27%">
-					<p><strong>Warning: You must backup your PC before you attempt reinstalling Windows 10 /11 as there is a high possibility that this might fail and you might lose your data.</strong></p>
-					<p>Reinstalling Windows should always be a last resort, if your PC is still really slow and glitchy after trying everything else on this page.</p>
-					<p>You can reinstall Windows 10 and later using the settings App, you just need to navigate to the Recovery settings page, alternatively you can use the link below.</p>
+				<h3 id="repair-windows">How to Repair Windows 11</h3>
+					<p><strong>Warning: You should backup your PC and files before you attempt to repair Windows 11.</strong></p>
+					<p>You can do an in-place repair on Windows 11 (Not available on Windows 10 and older) using the settings App, you just need to navigate to the "Recovery" settings page, alternatively you can use the link below.</p>
 					<a class="linkbutton" title="Launch Settings: Recovery." href="ms-settings:recovery">Open Windows Recovery</a>
 					<br>
-					<img src="windows_optimise/reset_reset_pc.webp" alt="an image showing the Windows 11 recovery page, Reset PC button is highlighted">
-					<p>After you have navigated to the Recovery Settings page, you need to click on the Reset PC button, you can use 'Reinstall Now' instead if you want to try and keep your apps, this will essentially start a giant Windows Update for your entire operating system.</p>
-					<img src="windows_optimise/keep_my_files.webp" alt="keep my files button is highlighted on choose an option popup.">
-					<p>You want to click the Keep my files button, this will aim to keep all your files but it will reset all of your settings and it will remove all of your apps.</p>
-					<p><strong>There is no guarantee that this will work, you might lose your files in the process, I advise you to back up your PC before you proceed.</strong></p>
-					<img src="windows_optimise/reset_pc_button.webp" alt="Rest button is highlighted on reset this PC popup.">
-					<p>Make sure that you agree to the following listed on your screen, once you are sure that you have made a backup of your computer and your files, you can click on the Reset button, this will then start the reset process.</p>
-					<p><strong>This process will take a while depending on the age of your computer system, it should not take any longer than 12 hours, if the process takes more than 12 hours you will need to contact Microsoft Support for help, or you will need to roll your PC back to the backup you made before starting.</strong></p>
+					<img src="windows_optimise/repair_reinstall_now.webp" alt="an image showing the Windows 11 recovery page, Reinstall Now button is highlighted">
+					<p>After you have navigated to the "Recovery" settings page, you need to click on the "Reinstall Now" button.</p>
+					<img src="windows_optimise/repair_ok.webp" alt="Fix problems using Windows Update prompt, OK button is highlighted">
+					<p>You should now see a popup saying, "We'll repair components and system files", you need to click "OK" to accept the terms presented.</p>
+					<img src="windows_optimise/repair_update_download.webp" alt="Image showing Windows Update settings page, Windows 11 (repair version) is highlighted">
+					<p>You should now see the "Windows Update" settings page, you will see a repair version of Windows downloading here, you need to wait for it to download and install, keep your PC turned on and plugged in during this process as it will take a while.</p>
+					<p>Once it has finished, you will be notified to restart your PC, again this process will take a while so keep it plugged in and turned on, after it has finished repairing, I advise you to run the Windows Optimiser again.</p>
+				<h3 id="reinstall-windows">Clean installing Windows 10/ 11</h3>
+					<p><strong>Warning: Clean installing will wipe your computer clean, you must backup all your files before even considering this option as they will be deleted off your machine.</strong></p>
+					<p>Clean installing Windows should always be a last resort and should only be done if your PC is still slow and glitchy after trying everything else on this page.</p>
+					<p>If you need to clean-install Windows 10/ 11 for any reason, you can follow these guides on the rTS Wiki:</p>
+					<a class="linkbutton" title="Clean installing Windows 10 guide" href="https://rtech.support/installations/install-10/">Guide: Installing Windows 10</a>
+					<br>
+					<a class="linkbutton" title="Clean installing Windows 11 guide" href="https://rtech.support/installations/install-11/">Guide: Installing Windows 11</a>
+					<br>
 		<hr>
-		<p>Page Updated: 02/03/2025</p>
+		<p>Page Updated: 24/03/2025</p>
 		<p>Page Author: Hackboto</p>
 	</article>
 	<footer class="asidefooter" title="Website Footer"> <!--Footer-->
