--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 	<section title="Main Content">
 		<div class="welcometext">
 			<h1>Contact Hackboto Tech Tips</h1>
-			<p>Notice: You submit data in this form at your own risk, Hackboto Tech Tips does not take any legal responsibility for the data submitted. The form uses a third-party service you can find their <a href="https://formspree.io/legal/privacy-policy/" class="linkblack" title="Go To Formspree Privacy Policy">Privacy Policy Here.</a></p>
+			<p>Notice: You submit data in this form at your own risk, Hackboto Tech Tips does not take any legal responsibility for the data submitted. The form uses a third-party service you can find their <a href="https://formspree.io/legal/privacy-policy/" class="linkwhite" title="Go To Formspree Privacy Policy">Privacy Policy Here.</a></p>
 		</div>
 		<br>
 		<div class="contact-form" title="Contact Form"> <!--Contact form-->
