--- a/pc_tips.html
+++ b/pc_tips.html
@@ -40,37 +40,37 @@
 	<section class="articles" title="Articles">
 		<h2>Guides</h2>
 		<div class="articlerow">
-			<div class="articlecolumn" style="background-image: url(pc_tips/card_images/upgradefrom10to11.webp);" title="Upgrading To Windows 11">
+			<div class="articlecolumn" title="Upgrading To Windows 11">
 				<h3>Upgrade to Windows 11 24H2</h3>
 				<hr>
 				<p>Did you know that Windows 10 is EOL on 14/10/2025? You need to upgrade to Windows 11 continue receiving security updates, this guide will explain what you need know and what you need to do to upgrade to Windows 11.</p>
 				<a href="pc_tips/upgrading_to_windows11.html" title="Read More about upgrading to Windows 11">View Guide</a>
 			</div>
-			<div class="articlecolumn" style="background-image: url(pc_tips/card_images/windows_errors.webp);" title="Optimising Windows 10/ 11">
+			<div class="articlecolumn" title="Optimising Windows 10/ 11">
 				<h3>Optimising Windows 10/ 11</h3>
 				<hr>
 				<p>Has your PC gotten very slow, are errors popping up all the time, is it taking you forever to get stuff done? If you are facing lacklustre performance and high levels of instability you should read on as this guide will explain how you can overcome these issues.</p>
 				<a href="pc_tips/windows_optimise.html" title="Read More about Optimising Windows 10/ 11">View Guide</a>
 			</div>
-			<div class="articlecolumn" style="background-image: url(pc_tips/card_images/black_artefacts_mockup.webp);" title="Fix Hardware Acceleration Issues">
+			<div class="articlecolumn" title="Fix Hardware Acceleration Issues">
 				<h3>Fix Hardware Acceleration Issues</h3>
 				<hr>
 				<p>Are you having issues with black screens, black boxes, black checkerboards, flickering video playback, etc on your Windows 10/ 11 PC? If you are, learn how you can fix the problem without disabling Hardware Acceleration.</p>
 				<a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn About Fixing Black Screens and Artefacts Without Disabling HW Acceleration">View Guide</a>
 			</div>
-			<div class="articlecolumn" style="background-image: url(pc_tips/card_images/computer_backup.webp);" title="Backing up your Windows 10/ 11 PC">
+			<div class="articlecolumn" title="Backing up your Windows 10/ 11 PC">
 				<h3>Backing up Windows 10/ 11</h3>
 				<hr>
 				<p>Do you regularly back up your files and computer system? If not, you need to start doing so in the event that your PC fails unexpectedly or becomes corrupted, learn about backing up your computer the correct way without the "Cloud".</p>
 				<a href="pc_tips/windows_backup.html" title="Learn About backing up your computer and your files.">View Guide</a>
 			</div>
-			<div class="articlecolumn" style="background-image: url(pc_tips/card_images/ads_everywhere.webp);" title="Blocking ads on your PC">
+			<div class="articlecolumn" title="Blocking ads on your PC">
 				<h3>Blocking ads on your PC</h3>
 				<hr>
 				<p>Are you getting sick of long loading times, popups, and distracting adverts everywhere on the internet? If you are you should learn about the uBlock Origin browser extension and how you can get rid of annoying ads once and for all.</p>
 				<a href="pc_tips/adblocker.html" title="Learn about blocking ads on your PC.">View Guide</a>
 			</div>
-			<div class="articlecolumn" style="background-image: url(pc_tips/card_images/display_1_dxdiag.webp);" title="Finding WDDM Version">
+			<div class="articlecolumn" title="Finding WDDM Version">
 				<h3>Finding your WDDM Version</h3>
 				<hr>
 				<p>Do you need to find the WDDM Driver Model version for your computer? This guide will assist you in using the dxdiag tool to find your WDDM version.</p>
