--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 				<label for="message" title="Your Message">Message:</label><br>
 				<textarea id="message" name="message" rows="4" required></textarea><br>
 				<input type="submit" value="Submit" title="Submit Form">
-				<p>By submitting this form you agree that you are sending the data in this form at your own risk, the data you have provided is correct, you give Hackboto Tech Tips permission to contact you, and you agree to the Hackboto Tech Tips <a href="https://hackbototechtips.github.io/legal.html" class="linkblack" title="Go To Hackboto Tech Tips Legal and Privacy Policy">terms and conditions.</a></p>
+				<p>By submitting this form you agree that you are sending the data in this form at your own risk, the data you have provided is correct, you give Hackboto Tech Tips permission to contact you, and you agree to the Hackboto Tech Tips <a href="https://hackbototechtips.github.io/legal.html" class="linkwhite" title="Go To Hackboto Tech Tips Legal and Privacy Policy">terms and conditions.</a></p>
 			</form>
 		</div>
 	</section>
