--- a/download_centre/settings_optimiser.html
+++ b/download_centre/settings_optimiser.html
@@ -42,15 +42,15 @@
 	<article title="Main Article Content">
 		<h1 id="top-of-page">Download: Settings Optimiser Scripts</h1>
 			<img src="settings_optimiser/system_settings_optimiser.webp" alt="an image representing the Settings Optimiser Script.">
-				<p class="imgdescription">The Hackboto Tech Tips Settings Optimiser Script is really easy to use, just follow the instructions that you are provided with.</p>
+				<p class="imgdescription">The Hackboto Tech Tips Settings Optimiser Script is really easy to use, you have two options when you launch it, accept the terms or decline them, if you decline the program will not run, if you accept it will run automatically and notify you when it is completed.</p>
 			<h2 id="function">What Does the Script Do?</h2>
 				<p>The Hackboto Tech Tips Settings Optimiser script is a free script that changes your Windows 10/ 11 settings, many of the settings changed are not accessible through the standard settings app, this is where the script comes into play as it disables unnecessary telemetry and data collection on your PC, the script will also disable non-essential system services that are made redundant as a result of the changes to your settings.</p>
 				<p>The script will disable things that are generally considered to be bloatware and adware on your PC, this script will remove things like Co-Pilot AI, Feed from Microsoft Edge browser, Windows spotlight, etc.</p>
 				<p><strong>I have designed my scripts in such a way that the core functionality in Windows 11 works as you'd expect, however many of the creators behind similar scripts are not as considerate and may end up and breaking core functionality such as being able to use OneDrive, sync passwords with Microsoft Edge, etc so be careful.</strong></p>
 			<h2 id="download">Downloading the scripts</h2>
 				<p>You can download the scripts using the download button below, this should start the download process.</p>
-				<a class="linkbutton" title="Download Settings_Optimiser.zip" href="https://github.com/H90HSORH0J30JHDSRH/Windows_Optimisation_Scripts/releases/download/1.2.92/Settings_Optimiser.zip">Download Settings_Optimiser.zip</a>
-				<p><strong>The latest version is 1.2.92 (01/06/2025)</strong></p>
+				<a class="linkbutton" title="Download Settings_Optimiser.zip" href="https://github.com/H90HSORH0J30JHDSRH/Windows_Optimisation_Scripts/releases/download/1.3.0/Settings_Optimiser.zip">Download Settings_Optimiser.zip</a>
+				<p><strong>The latest version is 1.3.0 (03/07/2025)</strong></p>
 				<p>The script is in two halves, read the "How do I use the script?" section to learn more.</p>
 				<img src="settings_optimiser/download.webp" alt="When you download the folder you should see two files, System__Settings_Optimiser.bat and User_Settings_Optimiser.bat">
 					<p>Once you have downloaded the file, you should have a .zip folder, this folder should contain the System__Settings_Optimiser.bat and User_Settings_Optimiser.bat scripts, if you do not see these scripts, it is possible that there is a problem with the download, if this happens try downloading again.</p>
@@ -69,13 +69,13 @@
 					<img src="settings_optimiser/UAC.webp" alt="Image representing User Account Control.">
 						<p>You will be asked to enter your Admin password at this stage, once you enter your password click yes. You might not need a password if you are using an Admin account to run the script.</p>
 					<img src="settings_optimiser/system_settings_optimiser.webp" alt="Image representing the settings optimiser">
-						<p>By this stage the System_Settings_Optimiser should be running, you will be asked to read through the Terms and Conditions, enter 'Y' if you agree to the Terms and Conditions and would like to start the script, if you do not agree with the Terms and Conditions enter 'N' and the script will close, and no changes will be made to your computer.</p>
+						<p>By this stage the System_Settings_Optimiser should be running, you will be presented with the Terms and Conditions press OK to dismiss, then you will be asked if you want to agree to the terms or decline, if you agree to the Terms and Conditions and would like to start the script press "yes", if you do not agree with the Terms and Conditions press "no" and the script will close, and no changes will be made to your computer.</p>
 						<p>Once the script has completed you will see a message telling you this, when you click OK, your computer will restart, and you can move onto step 2.</p>
 				<h3>Step 2: Run User__Settings_Optimiser</h3>
 					<p>This script does not require admin rights; therefore, you can run it on both standard and admin accounts. If you have many user accounts on your computer, you will need to run the script on each account.</p>
 					<p>To run the script, you need to repeat the steps in step 1, however you need to run the User_Settings_Optimiser.bat instead of the System_Settings_Optimiser.bat.</p>
 		<hr> 
-		<p>Page Updated: 01/06/2025</p>
+		<p>Page Updated: 03/07/2025</p>
 		<p>Page Author: Hackboto</p>
 	</article>
 	<footer class="asidefooter" title="Website Footer"> <!--Footer-->
